Modified navbar-collapse height and fixed overflow on smaller devices.

--- a/Assets/css/gal.css
+++ b/Assets/css/gal.css
@@ -79,7 +79,11 @@ h1{
         visibility: hidden;
     }
 }
-
+@media only screen and (max-width:480px ){
+    body,html{
+        overflow-y: hidden !important;
+    }
+}
 
 /* .nav_container.main_nav>ul>li{
     text-decoration: none;
